# call-of-claw

./: .gitignore  AGENTS.md  README.md  llm.config.example.json  pyproject.toml
.github/workflows/: release-bundle.yml
content/agent_skills/generic_gm_adjudication/: SKILL.md  manifest.yaml
content/capability_skills/clue_hygiene/: SKILL.md  manifest.yaml
content/evaluators/generic_playtest_judge/: SKILL.md  manifest.yaml
content/rulesets/coc7_light_investigation/: compiled.yaml  manifest.yaml  plugin.yaml  rules.md
content/rulesets/lasers_feelings_smoke/: compiled.yaml  manifest.yaml  (+1 more)
docs/: adding-content-and-resolvers.md  architecture-red-lines.md  context-clipping-strategy.md  deep-research-report.md  gm-agent-architecture-milestones.md  gm-agent-flowcharts.html  production-hardening.md  prompt-version-changelog.md  rebuild-from-scratch-plan.md
seeds/: rule.md  scenario.md
src/coc/: context_budget.py
src/trpg_agent/: __init__.py  context_budget.py
tests/: test_advisors.py  test_architecture_guardrails.py  test_cli_mvp.py  test_compiled_runtime.py  test_content_compiler.py  test_content_registry.py  test_context_budget.py  test_core_prompt.py  test_dice.py  test_eval_cases.py  test_judge.py  test_live_eval.py  test_memory.py  test_models.py  test_observation_report.py  test_online_playtest.py  test_playtest.py  test_production_hardening.py  test_regression.py  test_release_bundle.py  test_report.py  test_roadmap.py  test_turn_graph.py
tests/eval_cases/: deterministic.yaml  turn_bootstrap.yaml
tests/live_eval_cases/: cross_ruleset.yaml  smoke.yaml
(+109 files in other folders)
