[project]
name = "coc"
version = "0.1.0"
description = "Call of Claw, a generic LangChain/LangGraph TRPG GM runtime."
requires-python = ">=3.12"
dependencies = [
  "langchain>=1.0.0",
  "langgraph>=1.0.0",
  "langgraph-checkpoint-sqlite>=3.0.0",
  "langsmith>=0.4.0",
  "prompt_toolkit>=3.0.0",
  "pydantic>=2.10.0",
  "pyyaml>=6.0.0",
  "rich>=13.9.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]
release = [
  "pyinstaller>=6.11.0",
]

[project.scripts]
coc = "coc.app.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
